# scurve-be

./: .env.example  .gitignore  Cargo.toml  FRONTEND_GUIDE.md  README.md  copilot-instructions.md  copilot-prompt.md  openapi.json  scurve.db
migrations/: 202510080001_create_core_tables.sql  202510080002_create_projects.sql  202510080003_create_tasks.sql  202511050001_create_task_progress.sql  202511160001_add_task_progress_project_index.sql  202511160002_create_project_plan.sql  202511190001_add_task_timeline_fields.sql  202511200001_create_task_dependencies.sql  202511200002_add_task_parent_id.sql  202512110001_create_activity_log.sql  202512110002_event_store.sql  202512120001_rbac_schema.sql
src/: app.rs  db.rs  docs.rs  errors.rs  jwt.rs  lib.rs  main.rs  utils.rs
src/authz/: evaluator.rs  mod.rs  principal.rs
src/db/: mod.rs  row_parsers.rs  uuid_sql.rs
src/events/: loggable.rs  mod.rs
src/models/: dependency.rs  mod.rs  progress.rs  project.rs  project_plan.rs  rbac.rs  task.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs  progress.rs  projects.rs  rbac.rs  tasks.rs
tests/: activity_log.rs  api_integration.rs  auth_edge_cases.rs  critical_path.rs  critical_path_edge_cases.rs  dashboard.rs  demo_seed_db_flow.rs  get_single_items.rs  health.rs  milestone_detection.rs  openapi_schema.rs  project_plan.rs  row_parsers.rs  task_batch.rs  task_dependencies.rs  task_hierarchy.rs  task_timeline.rs  uuid_canonicalization.rs
