[package]
name = "s-curve"
version = "0.1.0"
edition = "2021"
authors = ["s-curve team"]
default-run = "s-curve"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum", "reqwest"] }
serde_path_to_error = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
ureq = "2"

[profile.release]
opt-level = 2        # Lower than 3 -> much faster to build, still optimized
lto = "thin"         # "fat" or true is slower to build; "thin" is faster but still optimizes cross-crate
codegen-units = 8    # Parallelize code generation across threads (faster build, a bit larger binary)
incremental = true   # Reuse previous compilation results
strip = "symbols"    # Reduces binary size, faster linking on some systems
panic = "abort"      # Removes unwinding code, faster compile + smaller binary
